@@ -2,8 +2,9 @@ Source: bootmail
 Section: admin
 Priority: optional
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
-Build-Depends: debhelper (>= 7.0.50~)
-Standards-Version: 3.9.4
+Build-Depends: debhelper (>= 7.0.50~),
+               dh-systemd,
+Standards-Version: 3.9.6
 Homepage: http://launchpad.net/bootmail
 
 Package: bootmail
